# PDF_Scanner

./: .gitignore  DESIGN_PLAN.md  README.md  install.sh  pdfscan.toml.example  pyproject.toml  scan.py  scan.sh
pdfscan/: __init__.py  acceleration.py  cache.py  clamav_client.py  cli.py  config.py  discover.py  evidence.py  extractors.py  hashing.py  ioc.py  lex.py  models.py  pdfid_lite.py  quarantine.py  report.py  scanner.py  scoring.py  structure.py  util.py  workers.py  yara_engine.py
pdfscan/rules/: ioc_hashes.txt  pdf_malicious.yar
tests/: test_cli_scan.py  test_config.py  test_discover.py  test_lex.py  test_scoring.py
